@@ -118,3 +118,4 @@ Changes in version 1.13.x
 + replace getExperiment* and testExperiment* functions with getCrossAssociation
 + Replace mergeRows and mergeCols with new function agglomerateByVariable
 + agglomerateByRank: bugfix related to agglomeration of non-existing tree
++ getHierarchyTree: bugfix related to empty cells in rowData
